E1-984 image not visible fix
E1-984 image not visible fix

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_teaser.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_teaser.scss
@@ -308,7 +308,7 @@
   &.image-right {
     .cmp-teaser {
       .img-static {
-        @include respond-to-max($phone) {
+        @include respond-to-max($custom-width-tab) {
           div.cover {
             position: relative;
 
@@ -324,7 +324,7 @@
         }
       }
 
-      @media screen and (min-width: 767px) and (max-width: 1024px) {
+      @media screen and (min-width: 768px) and (max-width: 1024px) {
         align-items: flex-end;
 
         div.cover {
